# hls_sinus_and_cosinus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  table_gen.sh
src/: CordicFunctionGen.cpp  cordic-test-16b.cpp  cordic-test.cpp
src/fixed_cordic/: cordic-10b.hpp  cordic-11b.hpp  cordic-12b.hpp  cordic-13b.hpp  cordic-14b.hpp  cordic-15b.hpp  cordic-16b.hpp  cordic-16bit.h  cordic-17b.hpp  cordic-18b.hpp  cordic-19b.hpp  cordic-20b.hpp  cordic-21b.hpp  cordic-22b.hpp  cordic-23b.hpp  cordic-24b.hpp  cordic-25b.hpp  cordic-26b.hpp  cordic-27b.hpp  cordic-28b.hpp  cordic-29b.hpp  cordic-30.hpp  cordic-30b.hpp  cordic-31b.hpp  cordic-32bit.h  cordic-6b.hpp  cordic-7b.hpp  cordic-8b.hpp  cordic-9b.hpp  cordic_fixed.hpp
